[package]
name = "rworm"
version = "0.1.0"
authors = ["Jake Armendariz <jakearmendariz99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.64"